--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:5003
+VITE_API_BASE_URL=https://gold-backend-production.up.railway.app
 
 # Google OAuth Configuration
 VITE_GOOGLE_CLIENT_ID=148699366684-vgd35agm0593psm6ebj0lppfoneinth9.apps.googleusercontent.com
