--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 # API Configuration
-VITE_API_BASE_URL=https://gold-backend-production.up.railway.app
+VITE_API_BASE_URL=http://localhost:5000
 
 # Google OAuth Configuration
-VITE_GOOGLE_CLIENT_ID=148699366684-vgd35agm0593psm6ebj0lppfoneinth9.apps.googleusercontent.com
-
+VITE_GOOGLE_CLIENT_ID=963724378767-so9jn50l7npd7p0um8vkvbd0mamrqjt4.apps.googleusercontent.com
 # Environment
 VITE_NODE_ENV=development
