--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.3",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -54,6 +55,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
