--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
