--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
-    "lodash": "^4.17.21",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -63,6 +63,7 @@
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
