--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
