--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-themes": "^0.4.6",
     "node-cron": "^4.2.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
