--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
 # API Configuration
 
-VITE_API_BASE_URL=http://localhost:5010 
+VITE_API_BASE_URL=http://localhost:5011
 
 
 # Google OAuth Configuration
-VITE_GOOGLE_CLIENT_ID=99142904402-4hf33s1t0e0oq3q840pn2242m2fglab1.apps.googleusercontent.com
+VITE_GOOGLE_CLIENT_ID=963724378767-so9jn50l7npd7p0um8vkvbd0mamrqjt4.apps.googleusercontent.com
 
 # Environment
 VITE_NODE_ENV=development
 
+GMAIL_USER =felopateradel73@gmail.com
+GMAIL_APP_PASSWORD=ueek murg ojsi xabk
